--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4799,7 +4799,7 @@ a.thumbnail.active {
 }
 .list-group {
   margin-bottom: 20px;
-  padding-left: 0;
+  padding-left: 100px;
 }
 .list-group-item {
   position: relative;
