--- a/app/views/families/show_m.html.haml
+++ b/app/views/families/show_m.html.haml
@@ -2,12 +2,15 @@
   .panel-heading
     %h4
       .pull-right
-        = link_to "", @access_url, class: "glyphicon glyphicon-new-window btn btn-default btn-sm"
         -if current_user.parent?
           =link_to "", multi_families_path(id: @family.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default btn-sm"
       = @family.name
   .panel-body
-    = image_tag(gravatar_for(@family), class: "img-rounded")
+    .pull-left
+      = image_tag(gravatar_for(@family), class: "img-rounded")
+    %ul.list-group
+      %li.list-group-item
+        = link_to t('views.family_access_link'), @access_url
 
 -@members.each do |user|
   =render partial: 'card_m', locals: { user: user }
