--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 .jumbotron{align: "center"}
-  %p.lead JARVIS
+  %p.lead Maple Leaf Family
   = form_tag sessions_path do
     .form-group
       = email_field_tag :email, '', placeholder: t('views.email'), class: "form-control"
