--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -16,7 +16,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand{href: ""}= image_tag("jarvis.png")
+        %a.navbar-brand= #{href: ""}= image_tag("jarvis.png")
       .collapse.navbar-collapse
         %ul.nav.navbar-nav.navbar-right{style: "margin-right:20px;"}
           %li= link_to t('views.sign_up'), signup_path, remote: true
