remove jarvis branding

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand{href: ""}= image_tag("jarvis.png")
+        %a.navbar-brand{href: ""}= 'ML Family' # image_tag("jarvis.png")
       .collapse.navbar-collapse
         %ul.nav.navbar-nav.navbar-right{style: "margin-right:20px;"}
           %li.dropdown
