--- a/app/views/layouts/application_m.html.haml
+++ b/app/views/layouts/application_m.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Jarvis
+    %title Maple Leaf - Family
     <!--[if IE]><script scr="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css"
@@ -19,7 +19,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand= image_tag("jarvis.png")
+        %a.navbar-brand= # image_tag("jarvis.png")
       .collapse.navbar-collapse
         %ul.nav.navbar-nav
           %li
