--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html.login
   %head
-    %title JARVIS
+    %title  Maple Leaf - Family
     <!--[if IE]><script scr="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css"
@@ -16,7 +16,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand= #{href: ""}= image_tag("jarvis.png")
+        %a.navbar-brand{href: ""}= 'ML Family' # image_tag("jarvis.png")
       .collapse.navbar-collapse
         %ul.nav.navbar-nav.navbar-right{style: "margin-right:20px;"}
           %li= link_to t('views.sign_up'), signup_path, remote: true
