--- a/app/views/layouts/my_family.html.haml
+++ b/app/views/layouts/my_family.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html.login
   %head
-    %title JARVIS
+    %title Maple Leaf - Family
     <!--[if IE]><script scr="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css"
@@ -11,7 +11,7 @@
   %body
     %nav.navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
       .navbar-header
-        %a.navbar-brand= image_tag("jarvis.png")
+        %a.navbar-brand= 'ML Family' #image_tag("jarvis.png")
     .container
       .col-md-4.col-md-offset-4
         = yield
