--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,8 +1,11 @@
-.jumbotron{align: "center"}
-  %p.lead Maple Leaf Family
-  = form_tag sessions_path do
-    .form-group
-      = email_field_tag :email, '', placeholder: t('views.email'), class: "form-control"
-    .form-group
-      = password_field_tag :password, '', placeholder: t('views.password'), class: "form-control"
-    %button.btn.btn-primary.btn-sm{:type => "submit"}= t('views.sign_in')
+.jumbotron
+  %h1 Maple Leaf Family
+  %p Stuff
+  %p
+    =link_to t('views.sign_up'), signup_path, remote: true, class: "btn btn-primary btn-lg"
+  -# = form_tag sessions_path do
+  -#   .form-group
+  -#     = email_field_tag :email, '', placeholder: t('views.email'), class: "form-control"
+  -#   .form-group
+  -#     = password_field_tag :password, '', placeholder: t('views.password'), class: "form-control"
+  -#   %button.btn.btn-primary.btn-lg{:type => "submit"}= t('views.sign_in')
