--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,6 @@
         ga('create', 'UA-80132261-1', 'auto');
         ga('send', 'pageview');
 
-</script>
 %body
   #wrapper
     .navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
@@ -30,21 +29,9 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand{href: ""}= 'ML Family' # image_tag("jarvis.png")
+        %a.navbar-brand{href: ""}= 'ML Family'
       .collapse.navbar-collapse
         %ul.nav.navbar-nav.navbar-right{style: "margin-right:20px;"}
-          %li.dropdown
-            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-              = current_user.name
-              %span.caret
-            %ul.dropdown-menu{:role => "menu"}
-              %li= link_to t('views.profile'), current_user
-              -if current_user.parent?
-                %li= link_to t('views.settings'), edit_user_path(current_user), remote: true
-                %li.divider
-              %li= link_to t('views.sign_out'), signout_path
-        .collapse.navbar-collapse.navbar-ex1-collapse
-        %ul.nav.navbar-nav.side-nav
           %li{class: "#{'active' if params[:controller] == 'families'}"}
             -if current_user.family
               = link_to t('views.family'), family_path(current_user.family)
@@ -54,14 +41,25 @@
             = link_to t('views.activity'), activities_path
           %li{class: "#{'active' if params[:controller] == 'tasks'}"}
             = link_to t('views.tasks'), tasks_path
-          %li{class: "#{'active' if params[:controller] == 'events'}"}
-            = link_to t('views.calendar'), events_path
-          %li{class: "#{'active' if params[:controller] == 'meals'}"}
-            = link_to t('views.menu'), meals_path
+          -# %li{class: "#{'active' if params[:controller] == 'events'}"}
+          -#   = link_to t('views.calendar'), events_path
+          -# %li{class: "#{'active' if params[:controller] == 'meals'}"}
+          -#   = link_to t('views.menu'), meals_path
+          %li.dropdown
+            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+              = current_user.name
+              %span.caret
+            %ul.dropdown-menu{:role => "menu"}
+              %li= link_to t('views.profile'), current_user
+              -# -if current_user.parent?
+              -#   %li= link_to t('views.settings'), edit_user_path(current_user), remote: true
+              %li.divider
+              %li= link_to t('views.sign_out'), signout_path
+        .collapse.navbar-collapse.navbar-ex1-collapse
+
     #page-wrapper
       .container-fluid
-        .row
-          = yield
+        = yield
 
     .container{style: "position:fixed; top:70px; right:0px; width:25%;"}
       -if flash.count > 0
