--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -5,11 +5,12 @@
     = f.email_field :email, label: t('views.email')
     = f.password_field :password, label: t('views.password')
     = f.password_field :password_confirmation, label: t('views.confirm_password')
-    = f.number_field :credits, placeholder: 0
-    = f.number_field :allowance, placeholder: 0, label: t('views.allowance')
-    = f.number_field :pin, :maxlength => 4
-    = f.form_group :parent do
-      = f.check_box :parent
+    - if current_user
+      = f.number_field :credits, placeholder: 0
+      = f.number_field :allowance, placeholder: 0, label: t('views.allowance')
+      = f.number_field :pin, :maxlength => 4
+      = f.form_group :parent do
+        = f.check_box :parent
     = f.submit t('views.save'), class: "btn btn-primary"
     = link_to "Cancel", "", class: "btn btn-default", data: {dismiss: "modal"}
     -if params[:action] == "multi"
