--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -19,7 +19,7 @@
         %a.navbar-brand ML Family
       .collapse.navbar-collapse
         %ul.nav.navbar-nav.navbar-right{style: "margin-right:20px;"}
-          %li= link_to t('views.sign_up'), signup_path, remote: true
+          %li= link_to t('sign_in'), login_path, remote: true
     .container
       .col-lg-4.col-lg-offset-4
         = yield
