more results instagram feed

--- a/app/views/social_medium/show.js.erb
+++ b/app/views/social_medium/show.js.erb
@@ -1,2 +1,3 @@
-$("#inner-modal").html("<%= escape_javascript(render 'show') %>");
-$("#modal").modal("show");
+// $("#inner-modal").html("<%= escape_javascript(render 'show') %>");
+// $("#modal").modal("show");
+$("#user-results").html("<%= escape_javascript(render 'show') %>");
