--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,41 +30,16 @@
     padding: 0;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
   .side-nav {
+    width: 25%;
     position: fixed;
-    top: 63px;
-    left: 0px;
-    width: 175px;
-    margin-left: -200px;
-    border: none;
-    border-radius: 0;
-    overflow-y: auto;
-    background-color: #3e3f3a;
-    margin-bottom: -5000px;
-    padding-bottom: 5000px;
   }
 
-  .side-nav li a:hover,
-  .side-nav li a:focus {
-    outline: none;
+  .results-nav {
+    margin-left: 25%;
+    padding-left: 20px;
   }
-
-}
-
-.side-nav>li>ul {
-  padding: 0;
-}
-
-.side-nav>li>ul>li>a {
-  display: block;
-  padding: 10px 15px 10px 38px;
-  text-decoration: none;
-  color: #999;
-}
-
-.side-nav>li>ul>li>a:hover {
-  color: #fff;
 }
 
 .week {
