--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -17,7 +17,9 @@ body {
   padding-top: 75px;
 }
 .feed-img {
-  max-width: 100%;
+  padding: 5px;
+  width: 100%;
+  height: auto;
 }
 article,
 aside,
