--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,10 +37,10 @@
               = link_to t('views.family'), family_path(current_user.family)
             -else
               = link_to t('views.family'), new_family_path, remote: true
-          %li{class: "#{'active' if params[:controller] == 'activities'}"}
-            = link_to t('views.activity'), activities_path
-          %li{class: "#{'active' if params[:controller] == 'tasks'}"}
-            = link_to t('views.tasks'), tasks_path
+          -# %li{class: "#{'active' if params[:controller] == 'activities'}"}
+          -#   = link_to t('views.activity'), activities_path
+          -# %li{class: "#{'active' if params[:controller] == 'tasks'}"}
+          -#   = link_to t('views.tasks'), tasks_path
           -# %li{class: "#{'active' if params[:controller] == 'events'}"}
           -#   = link_to t('views.calendar'), events_path
           -# %li{class: "#{'active' if params[:controller] == 'meals'}"}
