--- a/app/views/social_medium/_instagram.html.haml
+++ b/app/views/social_medium/_instagram.html.haml
@@ -1,30 +1,3 @@
 = render 'instagram_header'
 #results
-  - if @results.any?
-    - @results.each do |post|
-      .panel.panel-default
-        .panel-heading
-          %h3.panel-title
-            .pull-right
-              = time_ago_in_words(Time.zone.at(post.created_time.to_i))
-              %span.glyphicon.glyphicon-heart
-              =post.likes[:count]
-            = image_tag(post.user.profile_picture, size: '30x30', class: "img-rounded")
-            = link_to post.user.username, "http://instagram.com/#{post.user.username}"
-        .panel-body
-          %div
-            -if post[:videos]
-              = video_tag(post.videos.standard_resolution.url, controls: true, class: "feed-img")
-            -else
-              = image_tag(post.images.standard_resolution.url, class: "feed-img")
-            %p= post.caption.text if post.caption
-          -if post[:comments][:data]
-            - post[:comments][:data].each do |comment|
-              .media
-                %a.pull-left{:href => "http://instagram.com/#{comment.from[:username]}"}
-                  = image_tag(comment.from[:profile_picture], size: "30x30", class: "img-rounded media-object")
-                .media-body
-                  %h4.media-heading=link_to comment.from[:username], "http://instagram.com/#{comment.from[:username]}"
-                  = comment.text
-  -else
-    No Results
+  = render 'instagram_feed'
