--- a/app/views/social_medium/_instagram_header.html.haml
+++ b/app/views/social_medium/_instagram_header.html.haml
@@ -1,21 +1,20 @@
-.lead{align: "center"}
-  .pull-right= link_to "", "", class: "glyphicon glyphicon-remove", data: {dismiss: "modal"}
-  %p= @info['username']
-.well.well-sm
-  %table{width: "100%"}
-    %tr
-      %td= image_tag(@info['profile_picture'], size: '50x50', class: "img-rounded")
-      %td{align: "right"}
-        = link_to "#{@info['counts']['media']} #{t('views.posts')}", user_social_medium_path(@user, @feed, type: "recent"), remote: true, class: 'btn btn-default'
-        = link_to "#{@info['counts']['followed_by']} #{t('views.followers')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, rel_type: 'followers'), remote: true, class: 'btn btn-default'
-        = link_to "#{@info['counts']['follows']} #{t('views.following')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, rel_type: 'following'), remote: true, class: 'btn btn-default'
-    %tr
-      %td{colspan: '2'}= @info['full_name']
-    %tr
-      %td{colspan: '2'}= @info['bio']
-    %tr
-      %td{colspan: '2'}= link_to @info['website'], @info['website']
-  %p
-    = link_to '', user_social_medium_path(@user, @feed, type: "home"), remote: true, class: "glyphicon glyphicon-home btn btn-default"
-    = link_to '', user_social_medium_path(@user, @feed, type: "recent"), remote: true, class: "glyphicon glyphicon-user btn btn-default"
-    = link_to '', user_social_medium_path(@user, @feed, type: "direct"), remote: true, class: "glyphicon glyphicon-envelope btn btn-default"
+.panel.panel-default
+  .panel-heading
+    %h4
+      %table{width: "100%"}
+        %tr
+          %td= image_tag(@info['profile_picture'], size: '50x50', class: "img-rounded")
+          %td{align: 'center'}= @info['full_name']
+          %td{align: 'right'}= link_to @info['username'], "http://instagram.com/#{@info['username']}", target: :blank
+  .panel-body
+    %p
+      = @info['bio']
+      = link_to @info['website'], @info['website'], target: :blank
+    %table{width: "100%"}
+      %tr
+        %td
+          %strong= "#{@info['counts']['media']} #{t('views.posts')}"
+        %td{align: 'center'}
+          %strong= link_to "#{@info['counts']['followed_by']} #{t('views.followers')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, rel_type: 'followers'), remote: true
+        %td{align: 'right'}
+          %strong= link_to "#{@info['counts']['follows']} #{t('views.following')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, rel_type: 'following'), remote: true
