--- a/app/views/social_medium/show.js.erb
+++ b/app/views/social_medium/show.js.erb
@@ -1,3 +1,1 @@
-// $("#inner-modal").html("<%= escape_javascript(render 'show') %>");
-// $("#modal").modal("show");
-$("#user-results").html("<%= escape_javascript(render 'show') %>");
+$("#user-results").html('<%= escape_javascript(render "#{SocialMedia::TYPE_NAME[@feed.feed_type].downcase}") %>');
