--- a/app/views/social_medium/_instagram_post.html.haml
+++ b/app/views/social_medium/_instagram_post.html.haml
@@ -3,11 +3,10 @@
     .panel-heading
       %h3.panel-title
         .pull-right
-          = time_ago_in_words(Time.zone.at(@post.created_time.to_i))
-          %span.glyphicon.glyphicon-heart
-          =@post.likes[:count]
-        = image_tag(@post.user.profile_picture, size: '30x30', class: "img-rounded")
-        = link_to @post.user.username, "http://instagram.com/#{@post.user.username}"
+          = link_to content_tag(:i, nil, class: "fa fa-remove fa-2x"), "", data: {dismiss: "modal"}
+        = time_ago_in_words(Time.zone.at(@post.created_time.to_i))
+        %span.glyphicon.glyphicon-heart
+        =@post.likes[:count]
     .panel-body
       %div
         -if @post[:videos]
