--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -6,12 +6,9 @@
     = f.password_field :password, label: t('views.password')
     = f.password_field :password_confirmation, label: t('views.confirm_password')
     - if current_user
-      = f.number_field :credits, placeholder: 0
-      = f.number_field :allowance, placeholder: 0, label: t('views.allowance')
+      -# = f.number_field :credits, placeholder: 0
+      -# = f.number_field :allowance, placeholder: 0, label: t('views.allowance')
       = f.number_field :pin, :maxlength => 4
       = f.form_group :parent do
         = f.check_box :parent
     = f.submit t('views.save'), class: "btn btn-primary"
-    = link_to "Cancel", "", class: "btn btn-default", data: {dismiss: "modal"}
-    -if params[:action] == "multi"
-      = link_to t('views.delete'), @user, method: :delete, data: {confirm: t('views.are_you_sure')}, class: "btn btn-danger"
