--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,14 @@
     %link{:href => "/assets/font-awesome/css/font-awesome.min.css", :rel => "stylesheet"}/
     %link{:href => "//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css", :rel => "stylesheet"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
+    %link{:href => "/assets/apple-touch-icon-ipad-76x76.png", :rel => "apple-touch-icon", :sizes => "76x76"}
+    %link{:href => "/assets/apple-touch-icon-iphone-60x60.png", :rel => "apple-touch-icon", :sizes => "60x60"}
+    %link{:href => "/assets/apple-touch-icon-iphone-retina-120x120.png", :rel => "apple-touch-icon", :sizes => "120x120"}
+    %link{:href => "/assets/apple-touch-icon-ipad-retina-152x152.png", :rel => "apple-touch-icon", :sizes => "152x152"}
+    %link{:href => "/assets/android-icon-192x192.png", :rel => "icon", :sizes => "192x192", :type => "image/png"}/
+    %meta{:content => "#ffffff", :name => "msapplication-TileColor"}/
+    %meta{:content => "/assets/ms-icon-144x144.png", :name => "msapplication-TileImage"}/
+    %meta{:content => "#ffffff", :name => "theme-color"}
     %meta{:content => "yes", :name => "apple-mobile-web-app-capable"}
       :javascript
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
