family show matches user

--- a/app/views/families/my_family.html.haml
+++ b/app/views/families/my_family.html.haml
@@ -40,9 +40,9 @@
 
       / Controls
       %a.left.carousel-control{"data-slide" => "prev", :href => "#child-login", :role => "button"}
-        %span.glyphicon.glyphicon-chevron-left
+        %span.fa.fa-chevron-left
       %a.right.carousel-control{"data-slide" => "next", :href => "#child-login", :role => "button"}
-        %span.glyphicon.glyphicon-chevron-right
+        %span.fa.fa-chevron-right
     / Carousel
     .form-group
       = password_field_tag :pin, '', placeholder: t('views.pin'), class: "form-control"
