--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -3,28 +3,51 @@
     $('[data-toggle="tooltip"]').tooltip()
   })
 
-.col-lg-12
+.side-nav
   .panel.panel-default
     .panel-heading
       %h4
         .pull-right
           -if current_user.parent?
-            =link_to "", multi_families_path(id: @family.id), remote: true, class: "glyphicon glyphicon-cog btn btn-default btn-sm"
+            =link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), edit_family_path(@family), remote: true
         = t('views.blank_family', family: @family.name)
     .panel-body
-      .pull-left
-        = image_tag(gravatar_for(@family), class: "img-rounded")
-      %ul.list-group
-        %li.list-group-item
-          .pull-right
-            = link_to @access_url, @access_url
-            .glyphicon.glyphicon-asterisk{"data-original-title" => t('views.tip_family_link'), "data-placement" => "left", "data-toggle" => "tooltip", :title => "", :type => "button"}
-          = t('views.family_access_link')
+      %div{align: "center"}= image_tag(gravatar_for(@family), class: "img-rounded")
 
--@members.each do |user|
-  =render partial: 'card', locals: { user: user }
+      %table.table.table-hover
+        %thead
+          %tr
+            %th= t('portal')
+        %tbody
+          %tr
+            %td{colspan: '2'}= link_to @family.url, @access_url
 
-.col-lg-12
-  = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.todays_tasks, section: t('views.todays_tasks') }
-  -if current_user.parent?
-    = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.other_tasks, section: t('views.other_tasks') }
+      %table.table.table-hover
+        %thead
+          %tr
+            %th= t('members')
+            %th
+              -if current_user.parent?
+                = link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), new_user_path, remote: true
+        %tbody
+          -@members.each do |user|
+            %tr
+              %td= link_to user.name, user_path(user)
+              %td{style: "width:32px;"}
+                -if current_user.parent?
+                  = link_to content_tag(:i,nil, class: "fa fa-remove fa-1x"), user_path(user), method: :delete
+
+.results-nav
+  #user-results
+    .panel.panel-default
+      .panel-heading
+        %h4= t("activity")
+      .panel-body
+
+-# -@members.each do |user|
+-#   =render partial: 'card', locals: { user: user }
+-#
+-# .col-lg-12
+-#   = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.todays_tasks, section: t('views.todays_tasks') }
+-#   -if current_user.parent?
+-#     = render partial: 'users/tasks', locals: { family: @family, user: @current_user, tasks: @family.other_tasks, section: t('views.other_tasks') }
