--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,22 +8,12 @@
     .panel-heading
       %h4
         .pull-right
-          -# -unless @user.parent?
-          -#   .label.label-success{id: "credits"}
-          -#     = number_to_currency(@user.credits || 0)
           -if current_user.parent?
             %span{style: "padding-left:10px;"}
               =link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), edit_user_path(@user), remote: true
         = @user.name
     .panel-body
       %div{align: "center"}= image_tag(gravatar_for(@user), class: "img-rounded")
-      -# %ul.list-group
-      -#   -if @user.child?
-      -#     %li.list-group-item
-      -#       = t('views.weekly_allowance')
-      -#       .pull-right
-      -#         %span.badge= number_to_currency(@user.allowance || 0)
-      -#         .glyphicon.glyphicon-asterisk{"data-original-title" => t('views.tip_weekly_allowance'), "data-placement" => "left", "data-toggle" => "tooltip", :title => "", :type => "button"}
       %table.table.table-hover
         %thead
           %tr
@@ -35,6 +25,10 @@
               %tr
                 %td= link_to content_tag(:i, " #{feed.type_tag}", class: "fa fa-#{feed.type_tag.downcase} fa-2x"), user_social_medium_path(@user, feed, {type: 'recent'}), remote: true
                 %td{style: "width:32px;"}= link_to content_tag(:i,nil, class: "fa fa-remove fa-1x"), user_social_medium_path(@user, feed), method: :delete
+          -else
+            %tr
+              %td{colspan: '2', style: 'text-align: center;'}= t('no_social_media')
+
 
 .results-nav
   #user-results
@@ -42,14 +36,3 @@
       .panel-heading
         %h4= t("activity")
       .panel-body
-
-
--# .col-lg-6
--#   = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.todays_tasks.order('required').reverse, section: t('views.todays_tasks') }
--#   -if current_user.parent?
--#     = render partial: 'tasks', locals: { family: nil, user: @user, tasks: @user.other_tasks, section: t('views.other_tasks') }
--# -if @user.family
--#   .col-lg-6
--#     = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.todays_tasks, section: t('views.family_tasks') }
--#     -if current_user.parent?
--#       = render partial: 'tasks', locals: { family: @user.family, user: @user, tasks: @user.family.other_tasks, section: t('views.other_family_tasks') }
