--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,7 +12,22 @@
             %span{style: "padding-left:10px;"}
               =link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), edit_user_path(@user), remote: true
         = @user.name
-    .panel-body
+    .panel-body.visible-xs
+      %table.table.table-hover
+        %thead
+          %tr
+            %th= t('views.social_media')
+            %th{style: "width:32px;"}= link_to content_tag(:i, nil, class: "fa fa-plus fa-1x"), social_medium_users_path(id: @user.id), remote: true
+        %tbody
+          -if @user.social_medium.any?
+            %tr
+              %td{colspan: '2'}
+                -@user.social_medium.each do |feed|
+                  =link_to content_tag(:i, nil, class: "fa fa-#{feed.type_tag.downcase} fa-2x"), user_social_medium_path(@user, feed, {type: 'recent'}), remote: true
+          -else
+            %tr
+              %td{colspan: '2', style: 'text-align: center;'}= t('no_social_media')
+    .panel-body.hidden-xs
       %div{align: "center"}= image_tag(gravatar_for(@user), class: "img-rounded")
       %table.table.table-hover
         %thead
