--- a/app/views/users/_social_medium.html.haml
+++ b/app/views/users/_social_medium.html.haml
@@ -2,21 +2,28 @@
   .pull-right
     = link_to content_tag(:i, nil, class: "fa fa-remove fa-2x"), "", data: {dismiss: "modal"}
   %h3
-    = @user.name + " - " + t('views.social_media')
-
-%table.table.table-hover
-  %tbody
-    %tr
-      %td= content_tag(:i, " Instagram", class: "fa fa-instagram fa-2x")
-      %td
-        -if @user.instagram?
-          = link_to t("disable"), user_social_medium_path(@user, @user.instagram), method: :delete
-        -else
-          = link_to t("enable"), connect_instagram_index_path
-    %tr
-      %td= content_tag(:i, " Facebook", class: "fa fa-facebook fa-2x")
-      %td
-        -if @user.facebook?
-          = link_to t("disabled"), user_social_medium_path(@user, @user.facebook), method: :delete
-        -else
-          = link_to t("enable"), connect_facebook_index_path
+    =t('views.social_media')
+.modal-body
+  %table.table.table-hover{style: "width:100%;"}
+    %tbody
+      %tr
+        %td= content_tag(:i, " Instagram", class: "fa fa-instagram fa-2x")
+        %td{style: "width:50px;"}
+          -if @user.instagram?
+            = link_to t("enabled"), user_social_medium_path(@user, @user.instagram), method: :delete, class: 'btn btn-sm btn-success'
+          -else
+            = link_to t("disabled"), connect_instagram_index_path, class: 'btn btn-sm btn-danger'
+      %tr
+        %td= content_tag(:i, " Facebook", class: "fa fa-facebook fa-2x")
+        %td
+          -if @user.facebook?
+            = link_to t("enabled"), user_social_medium_path(@user, @user.facebook), method: :delete, class: 'btn btn-sm btn-success'
+          -else
+            = link_to t("disabled"), connect_facebook_index_path, class: 'btn btn-sm btn-danger'
+      %tr
+        %td= content_tag(:i, " Twitter", class: "fa fa-twitter fa-2x")
+        %td
+          -if @user.twitter?
+            = link_to t("enabled"), user_social_medium_path(@user, @user.twitter), method: :delete, class: 'btn btn-sm btn-success'
+          -else
+            = link_to t("disabled"), connect_twitter_index_path, class: 'btn btn-sm btn-danger'
