twitter feed mo betta

--- a/app/views/social_medium/_facebook.html.haml
+++ b/app/views/social_medium/_facebook.html.haml
@@ -2,7 +2,7 @@
   .panel-heading
     .pull-right
       %h4= link_to @info["name"], @info["link"], target: :blank
-    %h4 Facebook
+    %h4= content_tag(:i, " Faceook", class: "fa fa-facebook")
   .panel-body
     %table{width: "100%"}
       %tr
