--- a/app/views/social_medium/_twitter.html.haml
+++ b/app/views/social_medium/_twitter.html.haml
@@ -1,17 +1,17 @@
 .panel.panel-default
   .panel-heading
     .pull-right
-      %h4= link_to @info['screen_name'], "http://twitter.com/#{@info['screen_name']}", target: :blank
-    %h4 Twitter
+      %h4= link_to @info.screen_name, "http://twitter.com/#{@info.screen_name}", target: :blank
+    %h4= content_tag(:i, " Twitter", class: "fa fa-twitter")
   .panel-body
     %table{width: "100%"}
       %tr
         %td{style: 'padding-right: 10px;'}= image_tag(@feed['picture'], size: '50x50', class: "img-rounded")
-        %td= @info['description']
+        %td= @info.description
     %table{width: "100%"}
       %tr
         %td
-          %strong= "#{@info.tweets_count} #{t('views.posts')}"
+          %strong= link_to "#{@info.tweets_count} #{t('views.posts')}", user_social_medium_path(@user, @feed, {type: 'home'}), remote: true
         %td{align: 'center'}
           %strong= link_to "#{@info.followers_count} #{t('views.followers')}", relationships_user_social_medium_index_path(@user, feed_id: @feed.id, rel_type: 'followers'), remote: true
         %td{align: 'right'}
