--- a/app/views/social_medium/_facebook_feed.html.haml
+++ b/app/views/social_medium/_facebook_feed.html.haml
@@ -1,4 +1,5 @@
 - if @results.any?
+  -last_post = nil
   - @results.each do |post|
     .panel.panel-default
       .panel-heading
@@ -11,6 +12,14 @@
       .panel-body
         %div
           = post['message'] || post['story']
+  -if last_post
+    #more-loading{style: 'display:none;', align: 'center'}
+      %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
+        %h4.list-group-item.active
+          %i.fa.fa-spinner.fa-spin
+    #more-results
+      %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
+        %h4= link_to t("load_more"), more_results_user_social_medium_index_path(@user, feed_id: @feed.id, id: last_post.id), remote: true, class: "list-group-item active", onclick: "loadingMoreSocialMedia();"
 -else
   %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
     %h4= t("no_results")
