--- a/app/views/social_medium/_twitter_feed.html.haml
+++ b/app/views/social_medium/_twitter_feed.html.haml
@@ -15,9 +15,13 @@
           -post.media.each do |m|
             =image_tag(m.media_url.to_s, class: "feed-img img-rounded")
   -if last_post
+    #more-loading{style: 'display:none;', align: 'center'}
+      %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
+        %h4.list-group-item.active
+          %i.fa.fa-spinner.fa-spin
     #more-results
       %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
-        %h4= link_to t("load_more"), more_results_user_social_medium_index_path(@user, feed_id: @feed.id, id: last_post.id), remote: true, class: "list-group-item active"
+        %h4= link_to t("load_more"), more_results_user_social_medium_index_path(@user, feed_id: @feed.id, id: last_post.id), remote: true, class: "list-group-item active", onclick: "loadingMoreSocialMedia();"
 -else
   %div.list-group{style: "width:100%; padding-left:0px; text-align: center;"}
     %h4.list-group-item.active= t("no_results")
